--- a/doc/README.ps
+++ b/doc/README.ps
@@ -10,7 +10,7 @@
 %DVIPSCommandLine: dvips -o /home/karsten/src/Projects/M/doc/README.ps
 %+ README.dvi
 %DVIPSParameters: dpi=300, compressed, comments removed
-%DVIPSSource:  TeX output 1998.08.16:1105
+%DVIPSSource:  TeX output 1998.08.16:1803
 %%BeginProcSet: texc.pro
 /TeXDict 250 dict def TeXDict begin /N{def}def /B{bind def}N /S{exch}N
 /X{S N}B /TR{translate}N /isls false N /vsize 11 72 mul N /hsize 8.5 72
@@ -205,31 +205,31 @@ end definefont 3 -1 roll makefont /setfont load]cvx def}def
 end
 %%EndProcSet
 TeXDict begin 39158280 55380996 1000 300 300 (README.dvi)
-@start /Fa 103[30 31[30 30 1[30 30 30 30 1[30 30 30 30
-30 30 30 30 30 30 30 30 30 30 30 30 19[30 10[30 7[30
-10[30 30 46[{ TeXBase1Encoding ReEncodeFont }28 50.000001
-/Courier rf /Fb 143[37 3[20 6[30 37 21[50 5[50 20[30
-1[30 2[15 46[{ TeXBase1Encoding ReEncodeFont }9 59.999974
-/Palatino-Bold rf /Fc 136[36 6[25 22 1[39 14 6[19 1[20
+@start /Fa 143[37 3[20 6[30 37 21[50 5[50 19[30 2[30
+2[15 46[{ TeXBase1Encoding ReEncodeFont }9 59.999974
+/Palatino-Bold rf /Fb 136[36 6[25 22 1[39 14 6[19 1[20
 26[39 25[12 46[{ TeXBase1Encoding ReEncodeFont }9 50.000001
-/Palatino-Italic rf /Fd 1 16 df<EA03F0EA0FFC487E487E481380A2B512C0A86C13
-80A26C13006C5A6C5AEA03F012147D9519>15 D E /Fe 134[28
+/Palatino-Italic rf /Fc 103[30 31[30 30 30 30 30 30 30
+1[30 30 30 30 30 30 30 30 30 30 30 30 30 30 30 30 19[30
+10[30 1[30 5[30 10[30 30 30 45[{ TeXBase1Encoding ReEncodeFont }31
+50.000001 /Courier rf /Fd 1 16 df<EA03F0EA0FFC487E487E481380A2B512C0A86C
+1380A26C13006C5A6C5AEA03F012147D9519>15 D E /Fe 134[28
 26 42 28 30 16 21 20 28 30 27 29 44 14 28 12 14 29 28
 17 24 30 22 28 25 7[33 33 50 36 39 31 26 33 39 30 39
-41 47 30 36 1[17 41 38 28 30 39 35 30 39 1[22 4[12 5[25
-25 25 25 1[30 12 17 12 2[17 17 14 5[14 30[30 2[{
- TeXBase1Encoding ReEncodeFont }64 50.000001 /Palatino-Roman
-rf /Ff 138[44 24 32 28 1[44 40 44 64 24 2[24 44 1[28
-36 44 32 1[36 9[72 2[48 1[52 60 1[60 60 4[28 1[60 40
-1[60 2[56 1[32 9[36 36 36 36 36 3[24 18 2[24 24 40[{
- TeXBase1Encoding ReEncodeFont }37 71.999998 /Palatino-Bold
+41 47 30 36 1[17 41 38 28 30 39 35 30 39 1[22 4[12 25
+25 2[25 25 25 25 25 1[30 12 17 12 2[17 17 14 5[14 30[30
+2[{ TeXBase1Encoding ReEncodeFont }67 50.000001 /Palatino-Roman
+rf /Ff 136[60 1[44 24 32 28 1[44 40 44 64 24 2[24 44
+40 28 36 44 32 44 36 9[72 2[48 1[52 60 1[60 60 2[56 1[28
+1[60 40 1[60 2[56 1[32 8[36 36 36 36 36 36 3[24 18 2[24
+24 40[{ TeXBase1Encoding ReEncodeFont }42 71.999998 /Palatino-Bold
 rf /Fg 136[38 1[27 15 19 18 1[27 25 26 40 13 2[13 26
 25 15 22 28 20 25 23 12[28 24 5[43 3[15 7[35 7[23 23
 23 5[23 2[11 1[11 41[27 2[{ TeXBase1Encoding ReEncodeFont }31
 45.624988 /Palatino-Roman rf /Fh 139[15 20 18 14[20 28
 23 31[35 65[{ TeXBase1Encoding ReEncodeFont }7 45.624988
 /Palatino-Bold rf /Fi 137[36 36 36 36 36 1[36 36 36 36
-36 2[36 2[36 36 36 36 1[36 30[36 1[36 17[36 36 45[{
+36 36 1[36 3[36 36 36 1[36 30[36 1[36 17[36 36 45[{
  TeXBase1Encoding ReEncodeFont }20 59.999974 /Courier
 rf /Fj 3[36 134[36 19 25 24 2[33 35 1[17 3[35 33 1[29
 37 27 1[30 4[36 16[43 7[42 37 47 6[15 30 30 1[30 4[30
@@ -251,40 +251,44 @@ a4
 %%Page: 1 1
 1 0 bop 645 407 a Fl(M)31 b Fk(-)22 b(README)85 556 y
 Fj(Karsten)15 b(Ball\374der)f(\\\\\()p Fi(Ballueder@usa.net)p
-Fj(\)\\\\Contact)g(us:)k Fi(m-developers@findmail.com)685
-676 y Fj(16th)d(August)h(1998)828 861 y Fh(Abstract)250
-949 y Fg(These)c(ar)o(e)g(the)g(r)o(elease)f(notes)h(for)g(M.)g(Some)f
-(mor)o(e)h(detailed)f(information)i(on)182 1005 y(how)e(to)g(compile,)i
+Fj(\)\\\\Contact)g(us:)k Fi(m-developers@makelistcom)685
+676 y Fj(16th)d(August)h(1998)828 849 y Fh(Abstract)250
+925 y Fg(These)c(ar)o(e)g(the)g(r)o(elease)f(notes)h(for)g(M.)g(Some)f
+(mor)o(e)h(detailed)f(information)i(on)182 981 y(how)e(to)g(compile,)i
 (install)f(und)g(use)g(it)f(ar)o(e)g(in)h(the)g(Information)g(\002les.)
-250 1062 y(This)k(information)g(r)o(elates)f(to)g(the)g(\002rst)h
-(public)h(alpha)f(r)o(elease,)g(17.)26 b(August)182 1118
-y(1998.)60 1291 y Ff(1)72 b(W)-6 b(ARNING)16 b(-)h(this)h(is)f
-(\(pre-?\)alpha)60 1405 y Fe(When)d(you)h(do)g(a)g(lar)o(ge)f(fr)o(ee)g
+250 1037 y(This)k(information)g(r)o(elates)f(to)g(the)g(\002rst)h
+(public)h(alpha)f(r)o(elease,)g(17.)26 b(August)182 1094
+y(1998.)60 1265 y Ff(1)72 b(W)-6 b(ARNING)16 b(-)h(this)h(is)f
+(\(pre-?\)alpha)60 1379 y Fe(When)d(you)h(do)g(a)g(lar)o(ge)f(fr)o(ee)g
 (softwar)o(e)f(pr)o(oject,)j(you)e(have)h(two)f(choices:)21
-b(either)15 b(con-)60 1465 y(tinue)e(hacking)f(without)i(r)o(eleases)e
+b(either)15 b(con-)60 1439 y(tinue)e(hacking)f(without)i(r)o(eleases)e
 (and)h(risk)f(to)h(never)f(get)g(it)h(\002nished,)h(or)f(set)f
-(yourself)60 1525 y(a)f(r)o(elease)g(date,)i(no)e(matter)g(what)g(the)g
+(yourself)60 1500 y(a)f(r)o(elease)g(date,)i(no)e(matter)g(what)g(the)g
 (situation)i(is.)j(As)11 b(we)g(got)g(several)g(r)o(equests)g(fr)o(om)
-60 1586 y(people)18 b(who)f(want)g(to)g(play)h(with)f(it,)j(we)d
+60 1560 y(people)18 b(who)f(want)g(to)g(play)h(with)f(it,)j(we)d
 (decided)i(on)e(a)h(r)o(elease)f(date)h(and)f(did)i(our)60
-1646 y(best)14 b(to)h(get)f(it)h(into)g(a)g(working)e(shape.)22
+1620 y(best)14 b(to)h(get)f(it)h(into)g(a)g(working)e(shape.)22
 b(BUT)14 b(THIS)g(SOFTW)-5 b(ARE)15 b(IS)f(STILL)h(UNDER)60
-1706 y(DEVELOPMENT!)f(This)e(means)133 1820 y Fd(\017)24
+1680 y(DEVELOPMENT!)f(This)e(means)133 1782 y Fd(\017)24
 b Fe(it)13 b(is)g(incomplete)h(and)f(awkwar)o(d)e(to)i(use)133
-1922 y Fd(\017)24 b Fe(it)13 b(may)f(crash)g(occasionally)j(or)d(often)
-g(or)h(be)e(completely)j(unusable)60 2036 y(M)e(is)g(not)g(r)o(eady)g
+1881 y Fd(\017)24 b Fe(it)13 b(may)f(crash)g(occasionally)j(or)d(often)
+g(or)h(be)e(completely)j(unusable)60 1983 y(M)e(is)g(not)g(r)o(eady)g
 (for)f(the)h(end)g(user)f(yet,)h(but)g(we)f(pr)o(esent)g(it)i(in)f(its)
-g(curr)o(ent)g(state)g(to)g(give)60 2096 y(you)17 b(an)f(impr)o(ession)
+g(curr)o(ent)g(state)g(to)g(give)60 2043 y(you)17 b(an)f(impr)o(ession)
 i(of)e(what)h(it)g(is)g(going)g(to)g(be.)28 b(W)-5 b(e)17
-b(also)g(hope)g(to)g(attract)g(a)f(bit)h(of)60 2156 y(attention)d(and)e
+b(also)g(hope)g(to)g(attract)g(a)f(bit)h(of)60 2103 y(attention)d(and)e
 (maybe)g(even)g(some)h(outside)h(help)e(for)g(it.)60
-2330 y Ff(2)72 b(Which)17 b(features)g(are)g(implemented?)60
-2443 y Fe(Quite)c(some)g(alr)o(eady)-6 b(,)13 b(but)g(mor)o(e)f(ar)o(e)
+2275 y Ff(2)72 b(Which)17 b(features)g(are)g(implemented?)60
+2389 y Fe(Quite)c(some)g(alr)o(eady)-6 b(,)13 b(but)g(mor)o(e)f(ar)o(e)
 g(still)i(missing.)j(What)12 b(we)g(have)h(so)f(far:)133
-2558 y Fd(\017)24 b Fe(Cr)o(oss-platform.)34 b(M)18 b(compiles)i(on)e
+2491 y Fd(\017)24 b Fe(Cr)o(oss-platform.)34 b(M)18 b(compiles)i(on)e
 (a)g(variety)h(of)f(Unix)g(systems)h(and)f(on)h(Mi-)182
-2618 y(cr)o(osoft)13 b(W)m(indows.)j(Use)d(one)f(mail)h(client,)i(no)d
-(matter)h(what)f(system)g(you)h(use.)903 2856 y(1)p eop
+2551 y(cr)o(osoft)d(W)m(indows.)26 b(Use)15 b(one)h(mail)h(client,)h
+(no)d(matter)h(what)f(system)h(you)g(use.)182 2611 y(The)e(sour)o(ce)g
+(and)h(binary)f(for)g(W)m(indows)h(95/98/NT)f(ar)o(e)g(available)i(on)e
+(r)o(equest)182 2671 y(\()p Fc(m-developers@makelist.com)p
+Fe(\))o(.)31 b(Mailbox)19 b(\002le)g(formats)f(ar)o(e)g(the)g(same)182
+2731 y(on)13 b(both)f(platforms.)903 2856 y(1)p eop
 %%Page: 2 2
 2 1 bop 133 203 a Fd(\017)24 b Fe(Based)10 b(on)g(the)g(c-client)h
 (library)e(fr)o(om)g(the)h(University)g(of)f(W)-5 b(ashington,)12
@@ -293,113 +297,120 @@ g(pr)o(otocols)i(and)f(\002le)g(formats,)g(including)h(SMTP)-6
 b(,)182 324 y(MAP)g(,)12 b(POP3,)i(NNTP)e(and)h(several)g(mailbox)f
 (formats.)133 425 y Fd(\017)24 b Fe(W)m(ide)13 b(\(extr)o(eme?\))i
 (user)d(con\002gurability)-6 b(.)17 b(Whatever)12 b(makes)g(sense)h(to)
-g(override)182 485 y(or)j(change,)g(can)g(be)f(changed)h(by)f(the)h
+g(override)182 486 y(or)j(change,)g(can)g(be)f(changed)h(by)f(the)h
 (user)l(.)25 b(Con\002guration)17 b(supports)f(several)182
-545 y(con\002guration)e(\002les)g(on)f(Unix,)h(with)f(special)h
-(administrator)h(support)e(for)g(mak-)182 605 y(ing)g(entries)f
+546 y(con\002guration)e(\002les)g(on)f(Unix,)h(with)f(special)h
+(administrator)h(support)e(for)g(mak-)182 606 y(ing)g(entries)f
 (immutable,)i(and)f(the)f(r)o(egistry)g(on)h(W)m(indows.)133
-706 y Fd(\017)24 b Fe(Scriptable)14 b(and)g(extendable.)20
+708 y Fd(\017)24 b Fe(Scriptable)14 b(and)g(extendable.)20
 b(M)14 b(includes)h(an)f(embedded)g(Python)g(interpr)o(eter)182
-766 y(with)k(full)h(access)g(to)g(its)g(object)e(hierar)o(chy)-6
+768 y(with)k(full)h(access)g(to)g(its)g(object)e(hierar)o(chy)-6
 b(.)34 b(W)l(rite)18 b(object-oriented)h(scripts)g(to)182
-826 y(extend)12 b(and)h(contr)o(ol)h(M.)133 927 y Fd(\017)24
+828 y(extend)12 b(and)h(contr)o(ol)h(M.)133 930 y Fd(\017)24
 b Fe(Easy)19 b(MIME)g(support.)36 b(T)-5 b(ext)19 b(and)g(other)g
-(content)h(can)f(be)f(fr)o(eely)g(mixed)i(and)182 987
+(content)h(can)f(be)f(fr)o(eely)g(mixed)i(and)182 990
 y(dif)o(fer)o(ent)12 b(\002letypes)h(ar)o(e)f(r)o(epr)o(esented)g(by)g
-(icons.)133 1088 y Fd(\017)24 b Fe(Inline)13 b(displaying)h(of)e
-(images,)h(clickable)g(URLs,)h(XFace)e(support.)133 1189
-y Fd(\017)24 b Fe(Multiple)14 b(mail)f(folders.)133 1289
+(icons.)133 1092 y Fd(\017)24 b Fe(Inline)13 b(displaying)h(of)e
+(images,)h(clickable)g(URLs,)h(XFace)e(support.)133 1193
+y Fd(\017)24 b Fe(Multiple)14 b(mail)f(folders.)133 1295
 y Fd(\017)24 b Fe(Powerful)12 b(addr)o(ess)h(database)f(and)h(contact)g
-(manager)133 1390 y Fd(\017)24 b Fe(Printing)13 b(of)f(nicely)h
-(formatted)g(messages.)133 1491 y Fd(\017)24 b Fe(Full)17
+(manager)133 1397 y Fd(\017)24 b Fe(Printing)13 b(of)f(nicely)h
+(formatted)g(messages.)133 1499 y Fd(\017)24 b Fe(Full)17
 b(internationalisation)j(support,)e(M)e(speaks)h(multiple)h(languages,)
-f(but)g(no)182 1551 y(translations)d(yet.)60 1724 y Ff(3)72
-b(TODO,)17 b(features)f(to)i(implement)60 1838 y Fe(This)f(is)g(a)f
-(list)i(of)e(featur)o(es)f(on)i(our)f(T)o(ODO)g(list)i(that)f(we)e(ar)o
-(e)h(curr)o(ently)h(working)e(on.)60 1898 y(Befor)o(e)d(adding)i(new)d
-(featur)o(es,)i(we'll)f(clean)h(up)g(a)f(few)f(things:)133
-2008 y Fd(\017)24 b Fe(First)18 b(comes)g(a)g(r)o(ewrite)g(of)g(the)g
-(class)g(hierar)o(chy)-6 b(.)33 b(For)17 b(better)h(modularisation)182
-2068 y(and)g(CORBA)g(support)f(\(Python)g(will)i(pr)o(o\002t)e(fr)o(om)
-g(this,)j(too.\),)g(we)c(will)j(clean)182 2129 y(up)14
+f(but)g(no)182 1559 y(translations)d(yet.)60 1732 y Ff(3)72
+b(Known)17 b(bugs)133 1846 y Fd(\017)24 b Fe(selection)11
+b(in)g(the)f(folder)g(view)h(sometimes)g(behaves)e(strange,)i
+(selecting)f(all)h(mes-)182 1906 y(sages)h(doesn't)h(work)133
+2008 y Fd(\017)24 b Fe(message)12 b(and)h(composition)h(view)f(don't)g
+(automatically)h(scr)o(oll)g(to)f(the)f(cursor)133 2109
+y Fd(\017)24 b Fe(tab)12 b(traversal)h(in)f(dialogs)i(doesn't)f(work)f
+(\(wxGTK)f(pr)o(oblem\))60 2282 y Ff(4)72 b(TODO,)17
+b(features)f(to)i(implement)60 2396 y Fe(This)f(is)g(a)f(list)i(of)e
+(featur)o(es)f(on)i(our)f(T)o(ODO)g(list)i(that)f(we)e(ar)o(e)h(curr)o
+(ently)h(working)e(on.)60 2457 y(Befor)o(e)d(adding)i(new)d(featur)o
+(es,)i(we'll)f(clean)h(up)g(a)f(few)f(things:)133 2571
+y Fd(\017)24 b Fe(First)18 b(comes)g(a)g(r)o(ewrite)g(of)g(the)g(class)
+g(hierar)o(chy)-6 b(.)33 b(For)17 b(better)h(modularisation)182
+2631 y(and)g(CORBA)g(support)f(\(Python)g(will)i(pr)o(o\002t)e(fr)o(om)
+g(this,)j(too.\),)g(we)c(will)j(clean)182 2691 y(up)14
 b(header)f(\002les)i(and)f(r)o(emove)g(some)g(inter)o(dependencies.)21
-b(GUI)13 b(and)i(non-GUI)182 2189 y(code)c(will)h(be)e(better)g
-(separated,)i(class)f(implementations)i(and)e(interface)f(de\002ni-)182
-2249 y(tions)i(will)g(be)f(sorted)h(out)g(mor)o(e)f(clearly)-6
-b(.)16 b(This)11 b(includes)i(a)e(common)h(base)e(object)182
-2309 y(with)j(r)o(efer)o(ence)e(couting.)133 2410 y Fd(\017)24
-b Fe(Plug)13 b(the)f(\(very)g(few)f(r)o(emaining\))h(memory)g(holes.)60
-2520 y(Then)g(we)g(\002x)g(some)h(GUI)f(issues:)133 2631
-y Fd(\017)24 b Fe(add)13 b(keyboar)o(d)f(accelerators)g(and)h(pr)o
-(oper)f(tab)g(traversal)133 2731 y Fd(\017)24 b Fe(add)13
-b(a)g(context)f(sensitive)i(help)f(system)903 2856 y(2)p
-eop
+b(GUI)13 b(and)i(non-GUI)903 2856 y(2)p eop
 %%Page: 3 3
-3 2 bop 133 203 a Fd(\017)24 b Fe(add)13 b(mor)o(e)f(dialogs)i(and)f(a)
-f(tr)o(ee)h(contr)o(ol)g(for)f(folder)h(selection)60
-309 y(After)f(that)g(we)g(r)o(each)g(the)h(list)h(of)e(serious)h(impr)o
-(ovements:)133 415 y Fd(\017)24 b Fe(Better)18 b(Python)f(support.)31
+3 2 bop 182 203 a Fe(code)11 b(will)h(be)e(better)g(separated,)i(class)
+f(implementations)i(and)e(interface)f(de\002ni-)182 264
+y(tions)i(will)g(be)f(sorted)h(out)g(mor)o(e)f(clearly)-6
+b(.)16 b(This)11 b(includes)i(a)e(common)h(base)e(object)182
+324 y(with)j(r)o(efer)o(ence)e(couting.)133 424 y Fd(\017)24
+b Fe(Plug)13 b(the)f(\(very)g(few)f(r)o(emaining\))h(memory)g(holes.)60
+534 y(Then)g(we)h(\002x)g(some)g(GUI)g(issues.)18 b(Many)13
+b(of)g(these)g(depend)h(on)f(wxGTK)f(which)h(is)h(still)60
+594 y(evolving)f(speedily)-6 b(.)133 703 y Fd(\017)24
+b Fe(add)13 b(keyboar)o(d)f(accelerators)g(and)h(pr)o(oper)f(tab)g
+(traversal)133 804 y Fd(\017)24 b Fe(add)13 b(a)g(context)f(sensitive)i
+(help)f(system)133 905 y Fd(\017)24 b Fe(add)13 b(mor)o(e)f(dialogs)i
+(and)f(a)f(tr)o(ee)h(contr)o(ol)g(for)f(folder)h(selection)60
+1014 y(After)f(that)g(we)g(r)o(each)g(the)h(list)h(of)e(serious)h(impr)
+o(ovements:)133 1124 y Fd(\017)24 b Fe(Better)18 b(Python)f(support.)31
 b(W)-5 b(e)18 b(have)f(some)h(callbacks)g(in)g(place,)h(but)e(after)g
-(the)182 476 y(class)i(hierar)o(chy)g(r)o(ewrite)f(we)g(have)g(to)h
+(the)182 1184 y(class)i(hierar)o(chy)g(r)o(ewrite)f(we)g(have)g(to)h
 (generate)f(new)g(interface)h(\002les)g(for)f(the)182
-536 y(complete)h(class)f(hierar)o(chy)-6 b(.)32 b(Also)19
+1244 y(complete)h(class)f(hierar)o(chy)-6 b(.)32 b(Also)19
 b(by)e(this)i(time)f(wxPython)g(might)g(be)f(integ-)182
-596 y(rated,)f(so)e(we)g(can)h(actually)g(write)g(some)g(of)f(the)h
-(con\002guration)g(dialogs)h(in)f(py-)182 656 y(thon)e(which)f(should)i
-(speed)f(things)g(up.)j Fc(Help)c(welcome.)133 756 y
-Fd(\017)24 b Fe(Full)10 b(Drag)e(and)i(Dr)o(op)f(interaction)i(with)f
-(\002lemanagers)f(of)g(W)m(indows)h(and)g(Gnome)182 816
+1304 y(rated,)f(so)e(we)g(can)h(actually)g(write)g(some)g(of)f(the)h
+(con\002guration)g(dialogs)h(in)f(py-)182 1364 y(thon)e(which)f(should)
+i(speed)f(things)g(up.)j Fb(Help)c(welcome.)133 1465
+y Fd(\017)24 b Fe(Full)10 b(Drag)e(and)i(Dr)o(op)f(interaction)i(with)f
+(\002lemanagers)f(of)g(W)m(indows)h(and)g(Gnome)182 1525
 y(\(will)j(be)f(added)h(r)o(eal)g(soon,)g(easy\).)133
-916 y Fd(\017)24 b Fe(Easy)13 b(to)f(use)h(\002ltering)g(system)f(for)g
-(mails.)133 1015 y Fd(\017)24 b Fe(Support)13 b(for)e(V)l(-car)o(ds.)
-133 1115 y Fd(\017)24 b Fe(Nested)13 b(mail)h(folder)e(hierar)o(chy)-6
-b(.)133 1215 y Fd(\017)24 b Fe(Spam-Ex)12 b(spam)g
-(\002ghting/auto-complaint)j(function.)133 1314 y Fd(\017)24
+1626 y Fd(\017)24 b Fe(Easy)13 b(to)f(use)h(\002ltering)g(system)f(for)
+g(mails.)133 1726 y Fd(\017)24 b Fe(Support)13 b(for)e(V)l(-car)o(ds.)
+133 1827 y Fd(\017)24 b Fe(Nested)13 b(mail)h(folder)e(hierar)o(chy)-6
+b(.)133 1927 y Fd(\017)24 b Fe(Spam-Ex)12 b(spam)g
+(\002ghting/auto-complaint)j(function.)133 2028 y Fd(\017)24
 b Fe(Richt-text)13 b(editing)h(and)f(HTML)g(mail)g(support)133
-1414 y Fd(\017)24 b Fe(Support)13 b(for)e(PGP)i(and)g(GNU)g(Privacy)f
-(Guar)o(d)h(to)g(encrypt)f(mails.)133 1514 y Fd(\017)24
+2128 y Fd(\017)24 b Fe(Support)13 b(for)e(PGP)i(and)g(GNU)g(Privacy)f
+(Guar)o(d)h(to)g(encrypt)f(mails.)133 2229 y Fd(\017)24
 b Fe(Thr)o(eading)12 b(of)g(messages)g(and)h(pr)o(oper)f(usenet)h(news)
-f(support.)133 1613 y Fd(\017)24 b Fe(Compr)o(ession)13
-b(of)g(mail)g(folders.)133 1713 y Fd(\017)24 b Fe(Delay-Folder)12
+f(support.)133 2329 y Fd(\017)24 b Fe(Compr)o(ession)13
+b(of)g(mail)g(folders.)133 2430 y Fd(\017)24 b Fe(Delay-Folder)12
 b(to)h(keep)f(mails)h(and)g(r)o(e-pr)o(esent)e(them)i(at)f(a)h(later)f
-(date.)133 1813 y Fd(\017)24 b Fe(Context)13 b(sensitive)h(help)e
-(system)h(\(HTML)g(based\).)133 1912 y Fd(\017)24 b Fe(T)l(ranslations)
-13 b(to)f(German,)h(Fr)o(ench)f(and)g(Italian.)133 2012
+(date.)133 2530 y Fd(\017)24 b Fe(Context)13 b(sensitive)h(help)e
+(system)h(\(HTML)g(based\).)133 2631 y Fd(\017)24 b Fe(T)l(ranslations)
+13 b(to)f(German,)h(Fr)o(ench)f(and)g(Italian.)133 2731
 y Fd(\017)24 b Fe(W)m(ide)13 b(character)f(\(Unicode\))h(support)f(and)
-h(other)f(character)g(sets.)133 2112 y Fd(\017)24 b Fe(Import,)15
-b(export)f(and)h(synchr)o(onisation)g(with)g(other)f(pr)o(ograms')g
-(addr)o(ess)h(data-)182 2172 y(bases.)133 2272 y Fd(\017)24
-b Fe(V)-6 b(oice)13 b(mail.)133 2371 y Fd(\017)24 b Fe(Mor)o(e)12
-b(Python)h(support)g(thr)o(ough)f(wxPython.)133 2471
-y Fd(\017)24 b Fe(Support)d(for)g(Drag)f(and)h(Dr)o(op)g(interaction)h
-(with)g(KDE,)g(once)f(that)h(wxQt)e(is)182 2531 y(available.)133
-2631 y Fd(\017)k Fe(CORBA)13 b(support,)g(possible)h(cooperation)f
-(with)g(PINN)g(pr)o(oject.)133 2730 y Fd(\017)24 b Fe(ANY)13
-b(OTHER)g(SUGGESTION)903 2856 y(3)p eop
+h(other)f(character)g(sets.)903 2856 y(3)p eop
 %%Page: 4 4
-4 3 bop 60 203 a Fb(3.1)59 b(Help)15 b(Needed)60 299
-y Fe(As)i(you)f(can)h(see,)h(we)e(have)h(big)f(plans)h(for)f(M.)h(T)-5
-b(o)17 b(achieve)g(all)h(this,)h(we)d(need)h(some)60
-359 y(help.)f(Ar)o(eas)c(wher)o(e)g(we)f(would)j(use)e(some)h(help)f
-(ar)o(e)133 473 y Fd(\017)24 b Fe(Python)133 575 y Fd(\017)g
-Fe(support)13 b(for)e(further)h(mail)h(pr)o(otocols,)h(LDAP)133
-676 y Fd(\017)24 b Fe(The)17 b(wxQt)g(pr)o(oject,)i(a)f(port)g(of)f
-(wxW)m(indows)h(to)g(the)g(Qt)g(toolkit,)j(will)d(also)h(be)182
-737 y(happy)d(for)g(any)g(help.)28 b(W)-5 b(e)16 b(ar)o(e)g(not)h(dir)o
-(ectly)h(involved)g(in)f(this,)i(but)d(being)g(in-)182
-797 y(volved)e(with)e(wxW)m(indows,)h(we)f(ar)o(e)g(happy)g(to)h
-(support)g(that)f(port.)133 898 y Fd(\017)24 b Fe(If)12
+4 3 bop 133 203 a Fd(\017)24 b Fe(Import,)15 b(export)f(and)h(synchr)o
+(onisation)g(with)g(other)f(pr)o(ograms')g(addr)o(ess)h(data-)182
+264 y(bases.)133 365 y Fd(\017)24 b Fe(V)-6 b(oice)13
+b(mail.)133 467 y Fd(\017)24 b Fe(Mor)o(e)12 b(Python)h(support)g(thr)o
+(ough)f(wxPython.)133 569 y Fd(\017)24 b Fe(Support)d(for)g(Drag)f(and)
+h(Dr)o(op)g(interaction)h(with)g(KDE,)g(once)f(that)h(wxQt)e(is)182
+629 y(available.)133 731 y Fd(\017)k Fe(CORBA)13 b(support,)g(possible)
+h(cooperation)f(with)g(PINN)g(pr)o(oject.)133 832 y Fd(\017)24
+b Fe(ANY)13 b(OTHER)g(SUGGESTION)60 983 y Fa(4.1)59 b(Help)15
+b(Needed)60 1078 y Fe(As)i(you)f(can)h(see,)h(we)e(have)h(big)f(plans)h
+(for)f(M.)h(T)-5 b(o)17 b(achieve)g(all)h(this,)h(we)d(need)h(some)60
+1138 y(help.)f(Ar)o(eas)c(wher)o(e)g(we)f(would)j(use)e(some)h(help)f
+(ar)o(e)133 1253 y Fd(\017)24 b Fe(Python)133 1354 y
+Fd(\017)g Fe(support)13 b(for)e(further)h(mail)h(pr)o(otocols,)h(LDAP)
+133 1456 y Fd(\017)24 b Fe(The)17 b(wxQt)g(pr)o(oject,)i(a)f(port)g(of)
+f(wxW)m(indows)h(to)g(the)g(Qt)g(toolkit,)j(will)d(also)h(be)182
+1516 y(happy)d(for)g(any)g(help.)28 b(W)-5 b(e)16 b(ar)o(e)g(not)h(dir)
+o(ectly)h(involved)g(in)f(this,)i(but)d(being)g(in-)182
+1576 y(volved)e(with)e(wxW)m(indows,)h(we)f(ar)o(e)g(happy)g(to)h
+(support)g(that)f(port.)133 1678 y Fd(\017)24 b Fe(If)12
 b(you)g(have)g(access)g(to)h(other)f(systems)h(apart)f(fr)o(om)g
-(Linux/Solaris/W)m(indows,)182 959 y(you)j(ar)o(e)g(very)f(welcome)i
+(Linux/Solaris/W)m(indows,)182 1738 y(you)j(ar)o(e)g(very)f(welcome)i
 (to)f(help)h(us)f(port)g(M)h(to)f(those)h(platforms,)g(or)f(to)h(other)
-182 1019 y(har)o(dwar)o(e)c(than)g(Intel.)60 1192 y Ff(4)72
-b(Online)17 b(resources)133 1306 y Fd(\017)24 b Fe(M)13
-b(has)f(a)g(homepage)g(at)h Fa(http://Ballueder.home.ml.org/M)o(/)133
-1408 y Fd(\017)24 b Fe(The)9 b(wxW)m(indows)g(homepage)g(is)h
-Fa(http://web.ukonline.co.uk/julian.sm)o(art/)133 1509
+182 1798 y(har)o(dwar)o(e)c(than)g(Intel.)60 1971 y Ff(5)72
+b(Online)17 b(resources)133 2085 y Fd(\017)24 b Fe(M)13
+b(has)f(a)g(homepage)g(at)h Fc(http://Ballueder.home.ml.org/M)o(/)133
+2187 y Fd(\017)24 b Fe(The)9 b(wxW)m(indows)g(homepage)g(is)h
+Fc(http://web.ukonline.co.uk/julian.sm)o(art/)133 2289
 y Fd(\017)24 b Fe(wxGTK,)9 b(the)g(GTK)h(port)f(of)g(wxW)m(indows,)i
-(is)f(available)g(fr)o(om)f Fa(http://www.freiburg.linux.de/\230wxxt)o
-(/)60 1682 y Ff(5)72 b(F)l(AQ)60 1796 y Fe(Ther)o(e)11
+(is)f(available)g(fr)o(om)f Fc(http://www.freiburg.linux.de/\230wxxt)o
+(/)60 2462 y Ff(6)72 b(F)l(AQ)60 2576 y Fe(Ther)o(e)11
 b(will)j(be)e(some)g(after)g(this)h(r)o(elease)g(-)f(sur)o(ely)-6
 b(.)903 2856 y(4)p eop
 %%Trailer
